--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         body {
-            background-color: red;
+            /*background-color: red;*/
             /*justify-content: space-between;*/
             /*align-items: center;*/
             /*flex-direction: column;*/
